SERVER-77461 Do not attach OSI on collmod participant in v7.0 in order to prevent deadlock on session checkout